testdata/baselines/reference/submodule/compiler/noImplicitAnyWithOverloads.errors.txt
noImplicitAnyWithOverloads.ts(2,5): error TS7008: Member 'foo' implicitly has an 'any' type.
noImplicitAnyWithOverloads.ts(8,16): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== noImplicitAnyWithOverloads.ts (2 errors) ====
    interface A {
        foo;
        ~~~
!!! error TS7008: Member 'foo' implicitly has an 'any' type.
    }
    interface B { }
    
    function callb(lam: (l: A) => void);
    function callb(lam: (n: B) => void);
    function callb(a) { }
                   ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    callb((a) => { a.foo; }); // error, chose first overload